# hardtrust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  REVIEW.md  SHA256SUMS  install-attester.sh  install-device.sh  install.sh  justfile  release.toml
.github/workflows/: ci.yml  release.yml
attester/: Cargo.toml
attester/src/: lib.rs  main.rs
contracts/: .solhint.json  package-lock.json  package.json
contracts/script/: Deploy.s.sol
contracts/src/: HardTrustRegistry.sol
contracts/test/: HardTrustRegistry.t.sol
core/: Cargo.toml
core/src/: dev_config.rs  lib.rs
device/: Cargo.toml
device/src/: lib.rs  main.rs
docs/: DEMO-GUIDE.md  proposal.md  script_notes.txt
docs/adr/: 0007-no-personal-sign-prefix.md  0008-protocol-crate.md
docs/deployment/: attester-setup.md  device-setup.md
docs/specs/: s1-debt-v4-dev-config-extraction.spec.md
docs/stories/slice-2/: s2a.4-capture-environment-attestation.md
protocol/: Cargo.toml
protocol/src/: crypto.rs  dev_config.rs  domain.rs  error.rs  lib.rs
scripts/: build-attester.sh  build-device.sh  check-version.sh  e2e-the-wire.sh
terrascope/: capture.sh
types/: Cargo.toml
types/src/: dev_config.rs  lib.rs
web/: README.md  index.html
web/src/: App.jsx  styles.css
