[workspace]
members = ["device", "attester", "protocol"]
resolver = "2"

[profile.release]
strip = true        # remove debug symbols — smaller binaries
lto = "thin"        # thin LTO: good compile time / size tradeoff
codegen-units = 1   # enables full cross-crate inlining
opt-level = 3
panic = "abort"     # removes unwinder — safe for CLI, important for musl static
