[package]
name = "attester"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
alloy = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
hardtrust-core = { path = "../core" }
serde_json = "1"
hex = "0.4"

[dev-dependencies]
k256 = { version = "0.13", features = ["ecdsa"] }
