[package]
name = "device"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
hardtrust-core = { path = "../core" }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
k256 = { version = "0.13", features = ["ecdsa"] }
rand_core = { version = "0.6", features = ["getrandom"] }
hex = "0.4"

[dev-dependencies]
tempfile = "3"
