[package]
name = "device"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
hardtrust-protocol = { path = "../protocol" }
serde_json = "1"
chrono = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
rand_core = { version = "0.6", features = ["getrandom"] }
hex = "0.4"
rand = "0.8"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
