[package]
name = "hardtrust-protocol"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
k256 = { version = "0.13", features = ["ecdsa"] }
alloy-primitives = { version = "1", features = ["k256"] }
sha3 = "0.10"
hex = "0.4"
chrono = "0.4"

[dev-dependencies]
serde_json = "1"
